--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
