--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Boilerplate for my project REST Apis on the Web Development Top up. Uses: Express, Node, Mongodb, Mongoose, Typescript",
   "main": "server.ts",
   "scripts": {
-    "start-dev": "cross-env NODE_ENV=development nodemon ./src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production nodemon ./src/server.ts",
+    "dev": "cross-env NODE_ENV=development nodemon ./src/server.ts",
+    "test": "cross-env NODE_ENV=test mocha -r ts-node/register test/**/*.ts --exit"
   },
   "author": "Kos3l",
   "license": "ISC",
@@ -27,9 +28,15 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/chai": "^4.3.4",
+    "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.17",
+    "@types/mocha": "^10.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
