--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production nodemon ./src/server.ts",
     "dev": "cross-env NODE_ENV=development nodemon ./src/server.ts",
-    "test": "cross-env NODE_ENV=test mocha -r ts-node/register test/**/*.ts --exit"
+    "test": "cross-env NODE_ENV=test mocha -r ts-node/register ./src/test/**/*.ts --exit"
   },
   "author": "Kos3l",
   "license": "ISC",
