--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,8 +26,7 @@ jobs:
 
       - name: NPM install, build and test
         run: npm install
-          npm run
-          npm test
+          npm run test
         env:
           DBHOST: ${{ secrets.DBHOST }}
           TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
