--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,8 +25,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: NPM install, build and test
-        run: npm install
-          npm run test
+        run: |
+          npm install
+          npm run 
+          npm test
         env:
           DBHOST: ${{ secrets.DBHOST }}
           TOKEN_SECRET: ${{ secrets.TOKEN_SECRET }}
