--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.14.6",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
@@ -30,6 +31,7 @@
     "@types/body-parser": "^1.19.2",
     "@types/chai": "^4.3.4",
     "@types/chai-http": "^4.2.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mocha": "^10.0.1",
     "@types/swagger-ui-express": "^4.1.3",
