--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.14.6",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv-flow": "^3.2.0",
@@ -31,8 +32,10 @@
     "@types/body-parser": "^1.19.2",
     "@types/chai": "^4.3.4",
     "@types/chai-http": "^4.2.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
