--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.7",
     "dotenv-flow": "^3.2.0",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
